# ascodt-nightly

ASCoDTKernel/: .classpath  .project  build.properties  plugin.xml
ASCoDTKernel/schema/: de.tum.ascodt.plugin.extensions.Project.exsd
ASCoDTKernel/scripts/: generate_sidl_compiler.sh
ASCoDTKernel/src/: sidl-compiler.sablecc.grammar
ASCoDTKernel/src/de/tum/ascodt/plugin/: ASCoDTKernel.java  TestEnum.java
ASCoDTKernel/src/de/tum/ascodt/plugin/extensions/: Project.java
ASCoDTKernel/src/de/tum/ascodt/plugin/project/: Project.java  ProjectBuilder.java  ProjectChangedListener.java
ASCoDTKernel/src/de/tum/ascodt/plugin/repository/: ClasspathRepository.java  InstanceFactory.java
ASCoDTKernel/src/de/tum/ascodt/plugin/services/: SocketHandler.java  SocketService.java  UIService.java
ASCoDTKernel/src/de/tum/ascodt/plugin/ui/: ASCoDTBuilderPropertyPage.java
ASCoDTKernel/src/de/tum/ascodt/plugin/utils/: ConsoleStream.java  Exporter.java  Importer.java
ASCoDTKernel/src/de/tum/ascodt/repository/: Repository.java  RepositoryListener.java  Target.java  architecture.odg
ASCoDTKernel/src/de/tum/ascodt/repository/entities/: Component.java  ComponentTypes.java  CxxRemoteSocketComponent.java  CxxReverseRemoteSocketComponent.java  NativeComponent.java  SocketComponent.java
ASCoDTKernel/src/de/tum/ascodt/resources/: ResourceManager.java  auto-enumerator.template  basis-java-implementation.template  c-port-native-operation-plain-header.template  c-port-native2socket-operation-plain-header.template  c-port-native2socket-operation-plain-implementation.template  c-port-native2socket-plain-header.template  c-port-native2socket-plain-implementation.template  c-port-socket-dispatcher-operation-implementation.template  c-port-socket-dispatcher-proxy-implementation.template  cmakefile-fortran-uses-port.template  cmakefile-fortran.template  cxx-enumeration.template  cxx-port-dispatcher-header.template  cxx-port-dispatcher-implementation.template  cxx-port-interface.template  cxx-port-native-operation-dispatcher-implementation.template  cxx-port-native-operation-plain-header.template  cxx-port-native2java-operation-plain-implementation.template  cxx-port-native2java-plain-port-header.template  cxx-port-native2java-plain-port-implementation.template  cxx-port-native2native-operation-plain-implementation.template  cxx-port-native2native-plain-port-header.template  cxx-port-native2native-plain-port-implementation.template  cxx-port-native2socket-operation-plain-implementation.template  cxx-port-native2socket-plain-header.template  cxx-port-native2socket-plain-implementation.template  cxx-port-operation-interface.template  cxx-port-socket-dispatcher-header.template  cxx-port-socket-dispatcher-implementation.template  fortran-port-f2native-plain-port-implementation.template  fortran-port-f2native-plain-port-operation-implementation.template  fortran-port-f2native-proxy-plain-port-implementation.template  fortran-port-f2native-proxy-plain-port-operation-implementation.template  fortran-port-socket-dispatcher-implementation.template  fortran-port-socket-dispatcher-operation-implementation.template  fortran-port-socket-dispatcher-proxy-implementation.template  fortran-port-socket-dispatcher-proxy-operation-implementation.template  java-abstract-socket-component.template  java-component-abstract-java-implementation-uses-port-only-in-parameters.template  (+67 more)
ASCoDTKernel/src/de/tum/ascodt/sidlcompiler/: Compiler.java
ASCoDTKernel/src/de/tum/ascodt/sidlcompiler/astproperties/: ASTEquals.java  ExclusivelyInParameters.java  GetParameterList.java  GetProvidesAndUsesPortsOfComponent.java
ASCoDTKernel/src/de/tum/ascodt/sidlcompiler/backend/: CreateBuildScripts.java  CreateComponentsAndInterfaces.java  CreateCxxComponent.java  CreateCxxMakefile.java  CreateFortranComponent.java  CreateFortranMakefile.java  CreateJNIProxyForCxx.java  CreateJNIProxyForFortran.java  CreateJava2SocketClient.java  CreateJava2SocketServer.java  CreateJavaAndCxxEnumeration.java  CreateJavaComponentInterface.java  CreateJavaNativeComponent.java  CreateJavaPortInterface.java  CreateLocalJavaComponent.java  CreateNative2JavaPlainPorts.java  CreateNative2NativePlainPorts.java  CreateNative2SocketPlainPorts.java  CreateNativePortInterface.java  CreatePlainJavaPorts.java  CreateSocket2JavaPlainPorts.java  CreateSocketComponent.java  CreateSocketProxyForFortran.java  CreateSocketServerProxyForCxx.java
ASCoDTKernel/src/de/tum/ascodt/sidlcompiler/symboltable/: ASTValidator.java  BuildSymbolTable.java  Scope.java  SymbolTable.java
ASCoDTKernel/src/de/tum/ascodt/utils/: ConsoleDevice.java  OutputDevice.java  StdOutputDevice.java  TemplateFile.java  TimeConverter.java
components/: Readme.txt
components/athlet-components/: .athlet-components.ascodt  .gitignore
components/athlet-components/configurations/logging/: quabox_n3inp_log4j.xml  root_log4j.xml  tests_n3inp_log4j.xml
components/athlet-components/sidl/: Athlet.sidl  LinePlotter.sidl  Logger.sidl  Quabox.sidl
components/athlet-components/src/cmake-grs.Athlet/: CMakeLists.txt
components/athlet-components/src/cmake-grs.Quabox/: CMakeLists.txt
components/athlet-components/src/de/tum/charts/: LinePlotterBasisJavaImplementation.java  LinePlotterJavaImplementation.java  LinePlotterUI.java
components/athlet-components/src/de/tum/logging/: LoggerBasisJavaImplementation.java  LoggerJavaImplementation.java  LoggerUI.java
components/athlet-components/src/grs/: AthletBasisJavaImplementation.java  AthletImplementation.f90  AthletImplementation.f90~  AthletJavaImplementation.java  AthletUI.java  QuaboxBasisJavaImplementation.java  QuaboxImplementation.f90  QuaboxJavaImplementation.java  QuaboxUI.java  athlet.f  n3inp.f90  n3inte.f90  n3rest.f90  n3set.f90
components/athlet-cpmponents/: Readme.txt
components/athlet-cpmponents/MyAthletProj/sidl/: MyTestComponent.sidl
components/athlet-cpmponents/MyAthletProj/src/de/tum/: MyTestComponentBasisJavaImplementation.java  MyTestComponentJavaImplementation.java
releases/: Readme.txt
releases/juno/: Readme.txt  site.xml
(+189 files in other folders)
